force-app/main/default/objects/ProjectEmployeeRate__c/ProjectEmployeeRate__c.object-meta.xml
<CustomObject>
    <label>Project Employee Rate</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Project Employee Rate Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Employee Rates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>