force-app/main/default/objects/ProjectEmployeeRate__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Employee Rates</relationshipLabel>
    <relationshipName>ProjectEmployeeRates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>