force-app/main/default/objects/ProjectEmployeeRate__c/fields/ProjectEmployee__c.field-meta.xml
<CustomField>
    <fullName>ProjectEmployee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Employee Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Employee Rates</relationshipLabel>
    <relationshipName>ProjectEmployeeRates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>