force-app/main/default/objects/ProjectEmployeeRate__c/fields/ProjectEmployeeRateHour__c.field-meta.xml
<CustomField>
    <fullName>ProjectEmployeeRateHour__c</fullName>
    <label>Project Employee Rate (Hour)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>