force-app/main/default/objects/ProjectEmployeeRate__c/fields/ProjectEmployeeRole__c.field-meta.xml
<CustomField>
    <fullName>ProjectEmployeeRole__c</fullName>
    <label>Project Employee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ManagingDirector</fullName>
                <label>Managing Director</label>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Teamleader</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Trainee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>