force-app/main/default/objects/ProjectEmployeeRate__c/fields/ProjectEmployeeRoleDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectEmployeeRoleDescription__c</fullName>
    <label>Project Employee Role Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>