force-app/main/default/objects/ProjectEmployeeRate__c/listViews/Project_Employee_Rate.listView-meta.xml
<ListView>
    <fullName>Project_Employee_Rate</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>ProjectEmployeeRole__c</columns>
    <columns>ProjectEmployeeRateHour__c</columns>
    <columns>ProjectEmployeeRoleDescription__c</columns>
    <columns>ProjectEmployee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>CONNECTION_RECEIVED.NAME</columns>
    <columns>CONNECTION_SENT.NAME</columns>
    <columns>ProjectCurrency__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Project Employee Rate</label>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>